# Embedded-programming-2

2023-08-23 - C-kompilering i Linux/: Linuxkommandon 2023-08-23.txt  README.md
2023-08-23 - C-kompilering i Linux/makefile_test/cmake/: CMakeLists.txt
2023-08-23 - C-kompilering i Linux/makefile_test/gcc/: makefile  run_test
2023-08-23 - C-kompilering i Linux/makefile_test/inc/: utils.h
2023-08-23 - C-kompilering i Linux/makefile_test/src/: main.c
2023-08-25 - Unit testing med Google Test/: README.md
2023-08-25 - Unit testing med Google Test/gtest_example/: CMakeLists.txt  unit_test.cpp
2023-08-25 - Unit testing med Google Test/sorting/inc/: utils.h
2023-08-25 - Unit testing med Google Test/sorting/src/: main.c  utils.c
2023-08-30 - GPIO-implementering på Raspberry Pi/: README.md
2023-08-30 - GPIO-implementering på Raspberry Pi/electrical/inc/: electrical.h
2023-08-30 - GPIO-implementering på Raspberry Pi/electrical/src/: electrical.c
2023-08-30 - GPIO-implementering på Raspberry Pi/electrical/test/: CMakeLists.txt  electrical_test.cpp
2023-08-30 - GPIO-implementering på Raspberry Pi/gpiod_test/: CMakeLists.txt  main.c
2023-08-31 - Flertrådning med pthread/: README.md
2023-08-31 - Flertrådning med pthread/event_detection/src/: main.c
2023-08-31 - Flertrådning med pthread/thread_example/: run_thread_example_c  run_thread_example_cpp
2023-08-31 - Flertrådning med pthread/thread_example/c/: CMakeLists.txt  main.c
2023-08-31 - Flertrådning med pthread/thread_example/cpp/: CMakeLists.txt  main.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/: README.md
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_examples/mutex/: main.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_examples/semaphore/c/src/: main.c
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_examples/semaphore/cpp/src/: main.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_gpio/src/: main.c
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/c/mutex/inc/: mutex.h
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/c/mutex/src/: main.c  mutex.c
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/c/mutex/test/: CMakeLists.txt  mutex_unit_test.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/c/semaphore/inc/: semaphore.h
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/c/semaphore/src/: main.c  semaphore.c
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/c/semaphore/test/: CMakeLists.txt  semaphore_test.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/cpp/mutex/inc/: mutex.hpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/cpp/mutex/src/: main.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/cpp/mutex/test/: CMakeLists.txt  mutex_test.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/cpp/semaphore/binary_semaphore/test/: CMakeLists.txt  semaphore_test.cpp
2023-09-06 - Synkroniseringsmekanismer för flertrådade program/thread_sync_lib/python/: main.py  thread_sync.py
2023-09-26 - Python-programmering (del I)/: README.md
2023-09-26 - Python-programmering (del I)/example1/: main.py
2023-09-26 - Python-programmering (del I)/example2/: main.py
2023-09-26 - Python-programmering (del I)/example3/: main.py
2023-10-02 - Python-programmering (del II)/: README.md
2023-10-02 - Python-programmering (del II)/ex1/: input.txt  main.py
2023-10-02 - Python-programmering (del II)/ex2/: main.py
2023-10-02 - Python-programmering (del II)/ex3/: main.py
2023-10-02 - Python-programmering (del II)/ex4/: input.txt  main.py  output.txt
2023-10-02 - Python-programmering (del II)/ex5/: main.py
2023-10-02 - Python-programmering (del II)/ex6/: main.py
2023-10-02 - Python-programmering (del II)/ex7/: main.py  utils.py
2023-10-09 - Python-programmering (del III)/: README.md
2023-10-09 - Python-programmering (del III)/u1/: data.txt  main.py
2023-10-09 - Python-programmering (del III)/u2/: main.py
2023-10-09 - Python-programmering (del III)/u3/: main.py
2023-10-09 - Python-programmering (del III)/u4/: main.py
(+5 files in other folders)
